# FFmpegDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: AudioDecoder.h  Decoder.h  Grabber.h  Processor.h  Render.h  VideoDecoder.h  util.h
src/: AudioDecoder.cpp  Decoder.cpp  Grabber.cpp  Processor.cpp  Render.cpp  VideoDecoder.cpp  main.cpp
